# mazer

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: ci.yml  itchio.yml  release.yml
mazer/: CGA.txt  KEYBOARD.h  bitIcons.h  logging.h  maze.cpp  maze.h  mazer.cpp  mazer.h  stack.h
mazer/CGA/: GraphicsMode.cpp  GraphicsMode.h  TextMode.cpp
mazer/SYSTEM/: SYSTEM.cpp  SYSTEM.h  Timer.cpp  Timer.h
mazer/UI/: BlockCounter.h  BorderedBox.cpp  CurtainTransition.cpp  CurtainTransition.h  HUD.cpp  HUD.h  HeartMeter.cpp  HeartMeter.h  Label.cpp  Label.h  PauseMenu.cpp  ScoreScreen.cpp  ScoreScreen.h  TimerDisplay.h  Widget.cpp  Widget.h
src/: CGA.h  CMakeLists.txt  KEYBOARD.h  OEM437.cpp  OEM437.h  README.md  Settings.cpp  Settings.h  logging.h  maze.cpp  maze.h  mazer.cpp  mazer.h  moremath.cpp  moremath.h  stack.h
src/AUDIO/: AudioSystem.cpp  AudioSystem.h  BgmParams.cpp  BgmParams.h  BgmPlayer.cpp  BgmPlayer.h  SfxGenerator.cpp  SfxGenerator.h  SfxParams.cpp  SfxParams.h  SfxPlayer.cpp  SfxPlayer.h
src/CGA/: COLORS.h  GraphicsMode.cpp  GraphicsMode.h  MODEs.h  TextMode.cpp  TextMode.h
src/SYSTEM/: SYSTEM.cpp  SYSTEM.h
src/UI/: BlockCounter.cpp  BorderedBox.h  MainMenu.cpp  MainMenu.h  PauseMenu.h  ScoreScreen.cpp  ScoreScreen.h  SettingsScreen.cpp  SettingsScreen.h  SfxEditor.cpp  SfxEditor.h  TimerDisplay.cpp
tests/: AudioStub.cpp  CMakeLists.txt  MockGraphicsMode.h  SystemFixture.h  test_curtain.cpp  test_label.cpp  test_maze.cpp  test_moremath.cpp  test_score_screen.cpp  test_sfxgenerator.cpp  test_stack.cpp  test_widget.cpp
